--- a/404.md
+++ b/404.md
@@ -1,3 +1,7 @@
+---
+permalink: /404.html
+---
+
 Hello friends,
 
 The site has been around almost nine and a half years. It was a great experience and we learned a lot. Sadly, its time we say goodbye!
